; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/test/extr_nb_io_unix.c_nb_char_available.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/test/extr_nb_io_unix.c_nb_char_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i64 }

@STDIN_FILENO = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nb_char_available() #0 {
  %1 = alloca %struct.timeval, align 8
  %2 = alloca i32, align 4
  %3 = getelementptr inbounds %struct.timeval, %struct.timeval* %1, i32 0, i32 1
  store i64 0, i64* %3, align 8
  %4 = getelementptr inbounds %struct.timeval, %struct.timeval* %1, i32 0, i32 0
  store i64 0, i64* %4, align 8
  %5 = call i32 @FD_ZERO(i32* %2)
  %6 = load i64, i64* @STDIN_FILENO, align 8
  %7 = call i32 @FD_SET(i64 %6, i32* %2)
  %8 = load i64, i64* @STDIN_FILENO, align 8
  %9 = add nsw i64 %8, 1
  %10 = call i32 @select(i64 %9, i32* %2, i32* null, i32* null, %struct.timeval* %1)
  %11 = call i32 @FD_ISSET(i32 0, i32* %2)
  ret i32 %11
}

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i64, i32*) #1

declare dso_local i32 @select(i64, i32*, i32*, i32*, %struct.timeval*) #1

declare dso_local i32 @FD_ISSET(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
